--- a/test/fixtures/notes.yml
+++ b/test/fixtures/notes.yml
@@ -3,9 +3,9 @@
 one:
   title: MyString
   content: MyText
-  tags: MyString
+  tags: ["MyString"]
 
 two:
   title: MyString
   content: MyText
-  tags: MyString
+  tags: ["MyString"]
