--- a/Dockerfile.dev
+++ b/Dockerfile.dev
@@ -13,7 +13,13 @@ ENV RAILS_ENV="development" \
 
 # Install packages needed to build gems
 RUN apt-get update -qq && \
-    apt-get install --no-install-recommends -y build-essential git libpq-dev libvips pkg-config
+    apt-get install --no-install-recommends -y build-essential git libpq-dev libvips pkg-config wget gnupg2 lsb-release
+
+# Install latest version of postgres-client
+RUN wget --quiet -O - https://www.postgresql.org/media/keys/ACCC4CF8.asc | apt-key add -
+RUN sh -c 'echo "deb http://apt.postgresql.org/pub/repos/apt/ $(lsb_release -cs)-pgdg main" > /etc/apt/sources.list.d/pgdg.list'
+RUN apt-get update -qq
+RUN apt-get install -y postgresql-client
 
 # Install application gems
 COPY Gemfile Gemfile.lock ./
